Revision history for {{$dist->name}}

{{$NEXT}}
        - new option 'utf8' to interpret TAP source and potentially
          filter out illegal UTF-8 characters and the binary \0

0.98      2023-03-19
        - extend 'noempty_tap' logic to "not empty but no tap lines"
          (not relevant when 'preprocess_tap' is set)
        - distro hygiene

0.97      2022-06-15
        - fix replacement tap pragma line for 'noempty_tap' situation

0.96      2022-06-15
        - avoid accidental Perl 5.10+ idiom

0.95      2022-06-14
        - reuploads are my new hobby

0.94      2022-06-14
        - tweak handling of empty TAP(::Archive) documents, so far only
          when option 'noempty_tap' is provided to not trigger surprises.

0.93.2    2021-06-21
        - re-upload(?)

0.93.1    2021-06-14
        - fix test to work on windows

0.93      2021-06-05
        - provide mnemonics table for severity
        - evaluate TAP::DOM-specific pragma +tapdom_error
        - new option 'noempty_tap' to put in replacement lines with a
          '+pragma tapdom_error' which can be better evaluated by its
          'severity'
        - TAP::DOM::Archive allows filehandle as 'source'
          (requires new dependency to Scalar::Util)

0.92      2020-11-09
        - introduce 'severity' level to represent the combination of
          ok/notok and todo/skip as one ordinal number.
        - more complete information in non-test lines (plan, pragma)

0.91      2020-06-30
        - === INCOMPATIBILITY WARNING ===

          This release contains several changes towards a more
          consistent data handling. For casual users nothing
          substantially should change. But if you are one of the
          power users out there (I'm looking at you, Amzn), then
          read this changelog carefully.

        - fix argument handling: pass-through to TAP::DOM, delete
          newly introduced 'disable_global_kv_data'
