@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
         - new option 'utf8' to interpret TAP source and potentially
           filter out illegal UTF-8 characters and the binary \0
+        - new option 'ignoreunknown' to not include non-TAP lines in DOM
 
 0.98      2023-03-19
         - extend 'noempty_tap' logic to "not empty but no tap lines"
